Fixed: Minor styling quirks on tablet transparent header menu icons (#214)

--- a/assets/css/theme-rtl.css
+++ b/assets/css/theme-rtl.css
@@ -341,6 +341,11 @@ body.woocommerce-cart .header-top-nav .tb-cart-trigger {
 	float: left;
 	padding: 0;
 }
+@media (min-width: 768px) {
+	.mobile-nav > li {
+		margin-left: 5px;
+	}
+}
 .mobile-nav > li > a {
 	color: #666666;
     color: rgba(26,26,26,.7);
@@ -348,7 +353,7 @@ body.woocommerce-cart .header-top-nav .tb-cart-trigger {
 	font-size: 20px;
 	line-height: 64px;
 	opacity: .95;
-	padding: 0 14px;
+	padding: 0 18px;
 }
 .mobile-nav > li > a:hover {
 	color: rgba(26,26,26,.9);
